@@ -3,6 +3,9 @@ Changelog
 
 8.3-dev - (unreleased)
 ----------------------
+* Change: do not save success portal message in aggregated edit,
+  for simple_edit
+  [simiamih refs #16797]
 
 8.2 - (2013-12-05)
 ------------------
